<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="407dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_action_name" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/ryo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textColor="@color/graylight"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/alamat"
                android:textAlignment="center"
                android:textColor="@color/graylight"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="22dp"
            android:text="@string/postingan"
            android:textColor="@color/bg2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="22dp"
            android:text="@string/follower"
            android:textColor="@color/bg2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="22dp"
            android:text="@string/following"
            android:textColor="@color/bg2"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="-120dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="45dp"
        android:text="36"
        android:textColor="@color/startblue"
        android:textSize="25sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-75dp"
        android:fontFamily="sans-serif-black"
        android:text="764"
        android:textColor="@color/startblue"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="-30dp"
        android:text="56"
        android:textColor="@color/startblue"
        android:textSize="25sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/profil"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/biodata"
        android:textColor="@color/endblue"
        android:textSize="15sp"
        android:textStyle="italic" />

</LinearLayout>